fix word spacing and edit labels

--- a/resources/assets/sass/base.scss
+++ b/resources/assets/sass/base.scss
@@ -29,7 +29,11 @@ a {
 }
 
 mark, .mark {
-    background-color: $ls-color-primary;
+    background-color: #efefef;
+    border-radius: 5px;
+    color: $ls-color-black;
+    padding: 0.2em 0.4em;
+    margin: 0 1px;
 }
 
 code, .code {
